[package]
name = "dynalock"
edition = "2018"
description = "A lease based distributed locking algorithm with support for DynamoDB"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Amr Ali <amr@chorus.one>", "Frankie Bagnardi <f.bagnard@gmail.com>"]
homepage = "https://github.com/chorusone/dynalock"
repository = "https://github.com/chorusone/dynalock/tree/master"
readme = "README.md"
categories = ["algorithms", "data-structures", "asynchronous"]
keywords = ["distributed", "locking", "dynamodb", "lease", "advisory", "tokio"]

[badges]
travis-ci = { repository = "ChorusOne/dynalock", branch = "master" }

[features]
default = ["dynamodb", "async-tokio"]
dynamodb = ["rusoto_core", "rusoto_dynamodb", "uuid", "async-tokio"]
async = ["futures", "async-trait"]
async-tokio = ["tokio", "async"]

[dependencies]
log = { version = "^0.4" }
maplit = { version = "^1.0" }
uuid = { version = "^0.6", features = ["v4"], optional = true }
rusoto_core = { version = "^0.46", optional = true }
rusoto_dynamodb = { version = "^0.46", optional = true }
tokio = { version = "^1", optional = true }
futures = { version = "^0.3", optional = true }
async-trait = { version = "^0.1", optional = true }

[dev-dependencies]
rusoto_mock = { version = "^0.46" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = "abort"
